--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,9 +1,9 @@
 .main {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
-  padding: 6rem;
+  gap: 1rem;
   min-height: 100vh;
 }
 
