finish example vanilla js

--- a/example/vanilla-cafe/src/style.css
+++ b/example/vanilla-cafe/src/style.css
@@ -10,7 +10,11 @@ a:hover {
 body {
   margin: 0;
   display: flex;
-  place-items: center;
+  justify-content: flex-start;
+  align-items: center;
+  flex-direction: column;
   min-width: 320px;
   min-height: 100vh;
+  background-color: #181818;
+  color: #fff;
 }
